# LexRAG

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSES.md  README.md  SECURITY.md  plan.md  pyproject.toml  requirements.txt  settings.json  setup.py
.github/workflows/: ci.yml  publish.yml
api/: main.py  memory.py  rag_engine.py  utils.py
data/: lexrag.db
data/statutes/: india_gst_contests.txt
embeddings/: embedder.py
marketing/: index.html  style.css
scrapers/: india_scraper.py  uae_scraper.py
scripts/: bulk_ingest_pdfs.py  daily_update.py  ingest.py  ingest_all.py
space/: README.md  gradio_app.py  requirements.txt
tests/: test_confidence_tier.py  test_context_depth.py  test_embedder.py  test_jurisdiction.py  test_think_tags.py  test_utils.py
ui/: app.js  app.py  index.html  style.css
